ncc/testsuite/negative/yield3.n
using System.Collections.Generic;

class D
{
  public GetEnumerator1 () : IEnumerator [int]
  {
    try {
      yield 7; // E: using `yield' is not allowed here
    } catch {
      | _ => {}
    }
  }

  public GetEnumerator2 () : IEnumerator [int]
  {
    try {
      {}
    } catch {
      | _ =>
        yield 7; // E: using `yield' is not allowed here
    }
  }

  public f () : IEnumerable [int]
  { // E: null. literal is not a valid value of type void
    yield 1;
    Nemerle.Imperative.Return (null); // E: expected
  }

  public g () : IEnumerable [int]
  { // E: expected
    Nemerle.Imperative.Return (null);
    yield 1; // E: expected
  }
}
